# cv_labs

./: README.md
cv_lab1/: lab1.ipynb
cv_lab2/: CMakeLists.txt  README.md  test.cpp
cv_lab2/include/: base.hpp  conv.hpp
cv_lab2/src/: conv.cpp
